objects/Location.object
<CustomObject>
    <fields>
        <fullName>Address_Formula__c</fullName>
        <formula>VisitorAddress.Street &amp; BR() &amp;
VisitorAddress.City &amp; &quot;, &quot; &amp;
VisitorAddress.State &amp; &quot; &quot; &amp; VisitorAddress.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Time__c</fullName>
        <label>Closing Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDO_Golden_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</description>
        <inlineHelpText>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</inlineHelpText>
        <label>IDO Golden Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDO_Record_Description__c</fullName>
        <description>This field is used to provide a description on what types of demo this record can be used for. Intention is for this to be used by IDO agent.</description>
        <inlineHelpText>This field is used to provide a description on what types of demo this record can be used for. Intention is for this to be used by IDO agent.</inlineHelpText>
        <label>IDO Record Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opening_Time__c</fullName>
        <label>Opening Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Facilities__c</fullName>
        <label>Facilities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Preferred_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Services__c</fullName>
        <label>Services</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Store_Timings__c</fullName>
        <label>Store Timings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>